lto: Add Link Time Optimization support for GCC
This requires a modern version of GCC and various other patches in order
to work. LTO results in a smaller kernel binary with better performance.

Based off of work from Andi Kleen <ak@linux.intel.com>.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>
Signed-off-by: Adam W. Willis <return.of.octobot@gmail.com>
Signed-off-by: Diaz1401 <reagor8161@outlook.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1351,6 +1351,9 @@ config CAT_OPTIMIZE
 	default y
 	depends on ARCH_KONA
 
+config LTO_GCC
+	bool "Enable Link Time Optimization for GCC"
+
 config HAVE_LD_DEAD_CODE_DATA_ELIMINATION
 	bool
 	help
