ARM64: dts: qcom: Only build for kona-v2.1 board
* Some newly released POCO F3 using 'kona-v2.1' instead 'kona-v2' chip.

Signed-off-by: Diaz1401 <reagor8161@outlook.com>

--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -1,4 +1,4 @@
-kona_base_dtb := kona.dtb kona-v2.dtb kona-v2.1.dtb
+kona_base_dtb := kona-v2.1.dtb
 ifeq ($(CONFIG_BOARD_XIAOMI),y)
 
 ifeq ($(CONFIG_BOARD_XIAOMI_SM8250),y)
