--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1703,3 +1703,10 @@ source "arch/arm64/kvm/Kconfig"
 if CRYPTO
 source "arch/arm64/crypto/Kconfig"
 endif
+
+config HWCONF_MANAGER
+	bool "Hardware configuration and monitor information"
+	default y if BOARD_XIAOMI
+	help
+	  It provides all kinds of components configuration information and
+	  monitor values.
