--- a/qcom/kona-sde-display.dtsi
+++ b/qcom/kona-sde-display.dtsi
@@ -41,6 +41,7 @@
 #include "dsi-panel-k81-42-02-0a-video.dtsi"
 #include "dsi-panel-k81-35-02-0b-video.dtsi"
 #include "dsi-panel-l11r-38-08-0a-dsc-cmd.dtsi"
+#include "dsi-panel-l81a-42-04-0a-video.dtsi"
 
 #include "dsi-panel-r66451-dsc-fhd-plus-144hz-cmd.dtsi"
 #include "dsi-panel-nt36672e-fhd-plus-60hz-video.dtsi"
@@ -174,6 +175,21 @@
 			qcom,supply-name = "vddio";
 			qcom,supply-min-voltage = <1800000>;
 			qcom,supply-max-voltage = <1800000>;
+			qcom,supply-enable-load = <62000>;
+			qcom,supply-disable-load = <80>;
+			qcom,supply-post-on-sleep = <20>;
+		};
+	};
+
+	dsi_panel_pwr_supply_l81a: dsi_panel_pwr_supply_l81a {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		qcom,panel-supply-entry@0 {
+			reg = <0>;
+			qcom,supply-name = "vddio";
+			qcom,supply-min-voltage = <1832000>;
+			qcom,supply-max-voltage = <1832000>;
 			qcom,supply-enable-load = <62000>;
 			qcom,supply-disable-load = <80>;
 			qcom,supply-post-on-sleep = <20>;
@@ -590,6 +606,7 @@
 			&dsi_j3s_37_02_0a_dsc_video
 			&dsi_k81_42_02_0a_dual_cphy_video
 			&dsi_k81_35_02_0b_dual_cphy_video
+			&dsi_l81a_42_04_0a_dual_dphy_video
 			&dsi_j2s_mp_42_02_0a_dsc_cmd
 			&dsi_j2s_mp_42_02_0b_dsc_cmd
 			&dsi_l3a_mp_42_02_0a_dsc_cmd
@@ -1814,6 +1831,21 @@
 			qcom,mdss-dsi-panel-phy-timings = [00 00 00 00 27 2C 0A
 					19 0A 02 04 00 00 00];
 			qcom,display-topology = <2 0 2>;
+			qcom,default-topology-index = <0>;
+		};
+	};
+};
+
+&dsi_l81a_42_04_0a_dual_dphy_video {
+	qcom,dsi-ctrl-num = <0 1>;
+	qcom,dsi-phy-num = <0 1>;
+	qcom,dsi-select-clocks = "mux_byte_clk0", "mux_pixel_clk0";
+
+	qcom,mdss-dsi-display-timings {
+		timing@0 {
+			qcom,mdss-dsi-panel-phy-timings = [00 1C 08 07 17 16 07
+					07 08 02 04 00 19 0C];
+			qcom,display-topology = <2 2 2>;
 			qcom,default-topology-index = <0>;
 		};
 	};
