lib: zstd: update to v1.5.5
* include commit:
  Diaz1401/kernel_xiaomi_sm8250@18c399cc5e79 zstd: Merge optimizations from Samsung
  Diaz1401/kernel_xiaomi_sm8250@cf211eceba21 lib: zstd: Include a missing header
  Diaz1401/kernel_xiaomi_sm8250@381d0951cd33 lib: zstd: Fix attribute declaration
  Diaz1401/kernel_xiaomi_sm8250@00ab9f23cde3 lib: zstd: Rework Makefile

Signed-off-by: Diaz1401 <reagor8161@outlook.com>

--- a/lib/zstd/Makefile
+++ b/lib/zstd/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0+ OR BSD-3-Clause
 # ################################################################
-# Copyright (c) Facebook, Inc.
+# Copyright (c) Meta Platforms, Inc. and affiliates.
 # All rights reserved.
 #
 # This source code is licensed under both the BSD-style license (found in the
@@ -8,6 +8,7 @@
 # in the COPYING file in the root directory of this source tree).
 # You may select, at your option, one of the above-listed licenses.
 # ################################################################
+
 obj-y := \
 		zstd_compress_module.o \
 		compress/fse_compress.o \
