scripts: automatically regenerate defconfig
Signed-off-by: Diaz1401 <reagor8161@outlook.com>

--- a/scripts/update_defconfig
+++ b/scripts/update_defconfig
@@ -194,6 +194,9 @@ echo "================================================="
 echo "Done!"
 rm -rf "$OUT_DIR"
 
+# regenerate defconfig
+${KERNEL_TOP}/scripts/regenerate
+
 unset KERNEL_TOP
 unset KERNEL_CFG
 unset OUT_DIR
