ARM64: configs: alioth: update auto-generated defconfig for alioth
This update is generated automatically by using the update_defconfig script
HEAD of the project used to prepare this commit:
https://github.com/Diaz1401/kernel_xiaomi_sm8250/tree/43ab77f1da5102935ac6e95ddad900419e52d425

--- a/arch/arm64/configs/cat_defconfig
+++ b/arch/arm64/configs/cat_defconfig
@@ -181,6 +181,7 @@ CONFIG_RD_GZIP=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_CAT_OPTIMIZE=y
+CONFIG_LTO_GCC=y
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
@@ -686,9 +687,9 @@ CONFIG_ARCH_HAS_STRICT_KERNEL_RWX=y
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
 CONFIG_REFCOUNT_FULL=y
-CONFIG_HAVE_ARCH_PREL32_RELOCATIONS=y
 CONFIG_PANIC_ON_REFCOUNT_ERROR=y
 CONFIG_ARCH_HAS_RELR=y
+CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG=y
 
 #
 # GCOV-based kernel profiling
@@ -841,6 +842,9 @@ CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_USERSPACE_LOW_MEMORY_KILLER=y
 # CONFIG_GUP_BENCHMARK is not set
 CONFIG_ARCH_HAS_PTE_SPECIAL=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
+# CONFIG_LRU_GEN_STATS is not set
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_EMERGENCY_MEMORY=y
 CONFIG_NET=y
