ARM64: configs: alioth: update auto-generated defconfig for alioth
This update is generated automatically by using the update_defconfig script
HEAD of the project used to prepare this commit:
https://github.com/Diaz1401/kernel_xiaomi_sm8250/tree/6413cf0d573c9a6bd020812031642d66c999b630

--- a/arch/arm64/configs/cat_defconfig
+++ b/arch/arm64/configs/cat_defconfig
@@ -344,6 +344,7 @@ CONFIG_PCI_MSI=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_PCI_QUIRKS=y
 # CONFIG_PCI_STUB is not set
+CONFIG_PCI_LOCKLESS_CONFIG=y
 # CONFIG_PCI_IOV is not set
 # CONFIG_PCI_PRI is not set
 # CONFIG_PCI_PASID is not set
@@ -555,7 +556,7 @@ CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_TIMES=y
+# CONFIG_CPU_FREQ_TIMES is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -4758,7 +4759,7 @@ CONFIG_QCOM_QDSS_BRIDGE=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QTI_SYSTEM_PM=y
 CONFIG_QCOM_SMCINVOKE=y
-CONFIG_MSM_EVENT_TIMER=y
+# CONFIG_MSM_EVENT_TIMER is not set
 CONFIG_MSM_PM=y
 # CONFIG_MSM_IDLE_STATS is not set
 # CONFIG_QTI_L2_REUSE is not set
