gcov: reduce kernel optimization flags
* expect generate better gcov profile

Signed-off-by: Diaz1401 <diaznura@outlook.com>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -532,6 +532,7 @@ config LTO_CLANG
 
 config LTO_GCC
 	bool "Use GCC Link Time Optimization (LTO) (EXPERIMENTAL)"
+	depends on !GCOV_KERNEL
 	select LTO
 
 endchoice
