--- a/drivers/staging/qcacld-3.0/configs/qca6390_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/qca6390_defconfig
@@ -369,13 +369,13 @@ ifneq ($(TARGET_BUILD_VARIANT),user)
 endif
 
 #Enable WLAN/Power debugfs feature only if debug_fs is enabled
-ifeq ($(CONFIG_DEBUG_FS), y)
+#ifeq ($(CONFIG_DEBUG_FS), y)
        # Flag to enable debugfs. Depends on CONFIG_DEBUG_FS in kernel
        # configuration.
-       CONFIG_WLAN_DEBUGFS := y
+       #CONFIG_WLAN_DEBUGFS := y
 
-       CONFIG_WLAN_POWER_DEBUGFS := y
-endif
+       #CONFIG_WLAN_POWER_DEBUGFS := y
+#endif
 
 # Feature flags which are not (currently) configurable via Kconfig
 
