--- a/kernel/gcov/Kconfig
+++ b/kernel/gcov/Kconfig
@@ -2,8 +2,8 @@ menu "GCOV-based kernel profiling"
 
 config GCOV_KERNEL
 	bool "Enable gcov-based kernel profiling"
-	depends on DEBUG_FS
 	select CONSTRUCTORS if !UML
+	select ALIAS_DEBUG_FS
 	default n
 	---help---
 	This option enables gcov-based code profiling (e.g. for code coverage
