workflows: update branch
Signed-off-by: Diaz1401 <diaznura@outlook.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: [ "kucing-13-beta" ]
+    branches: [ "kucing-13-gcov" ]
 env:
   TZ: "Asia/Jakarta"
   TELEGRAM_TOKEN: "${{ secrets.TELEGRAM_TOKEN }}"
