--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ env:
   TZ: "Asia/Jakarta"
   TELEGRAM_TOKEN: "${{ secrets.TELEGRAM_TOKEN }}"
 jobs:
-  build-jet-16:
+  build-gcc:
     runs-on: buildjet-16vcpu-ubuntu-2204
     container:
       image: diazaji/debian:kernel
@@ -14,5 +14,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: build
       run: |
-        wget -qO build.sh https://raw.githubusercontent.com/Diaz1401/build-script/alioth/build-gcc.sh
-        bash build.sh
+        wget -qO build.sh https://raw.githubusercontent.com/Diaz1401/build-script/alioth/build.sh
+        bash build.sh gcc stable opt lto
+  build-clang:
+    runs-on: buildjet-16vcpu-ubuntu-2204
+    container:
+      image: diazaji/debian:kernel
+    steps:
+    - uses: actions/checkout@v3
+    - name: build
+      run: |
+        wget -qO build.sh https://raw.githubusercontent.com/Diaz1401/build-script/alioth/build.sh
+        bash build.sh clang beta opt lto
