workflows: ignore `-Werror`
* Diaz1401/gcc-13@289d91fc105df3b7cfd08856599daa2457602b11

Signed-off-by: Diaz1401 <diaznura@outlook.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
 env:
   TZ: "Asia/Jakarta"
   TELEGRAM_TOKEN: "${{ secrets.TELEGRAM_TOKEN }}"
+  GCC_IGNORE_WERROR: true
 jobs:
   build-gcc:
     runs-on: buildjet-16vcpu-ubuntu-2204
